--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".ItemListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" /> // 모바일 딥링크, App is not indexable by Google Search 오류 참조.
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
