--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ subprojects {
 }
 
 dependencies {
-    implementation 'com.android.volley:volley:1.1.0'
+//    implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -38,10 +38,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.amazonaws:aws-android-sdk-appsync:2.6.+'
-    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
-    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
+//    implementation 'com.amazonaws:aws-android-sdk-appsync:2.6.+'
+//    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
+//    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation'com.squareup.okhttp:okhttp:2.4.0'
+    implementation'com.squareup.okhttp3:logging-interceptor:3.3.1'
 
 }
