다른 클라이언트와의 채팅 기능 구현, db에 채팅 기록 저장하는 로직 추가 예정

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,10 @@ subprojects {
 }
 
 dependencies {
-//    implementation 'com.android.volley:volley:1.1.0'\
-    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    def room_version = "2.2.3"
+
+    implementation "androidx.room:room-runtime:$room_version"
     implementation 'com.google.code.gson:gson:2.3.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -39,14 +41,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-//    implementation 'com.amazonaws:aws-android-sdk-appsync:2.6.+'
-//    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.0'
-//    implementation 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.okhttp:okhttp:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     implementation('io.socket:socket.io-client:1.0.0') {
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
         exclude group: 'org.json', module: 'json'
         //https://dev-juyoung.github.io/2017/09/05/android-socket-io/
         //  https://www.slideshare.net/ssuserf64d04/nodeexpress
